src/app/styles/components/_colorBar.scss
.colorBar {
  position: absolute;
  bottom: 0;
  left: 50%;
  transform: translate(-50%, 0);
  z-index: 2;
  display: flex;
  justify-content: center;
  width: 70vw;
  margin-bottom: 15px;
  background-color: white;
  border: solid 3px $main-orange;
  padding: 15px 30px;
  border-radius: 50px;
  gap: 10px;
  @media screen and (max-width: 1000px) {
    margin-bottom: 45px;
  }
}

.cooldown {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  font-family: $Unibody-bold;
  color: $main-orange;
}

.color-item {
  background-color: #ff5a5f;
  height: 35px;
  min-width: 35px;
  border-radius: 50%;
  border: 1px solid black;
  transition: all 0.3s;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #fff;
  scroll-snap-align: start;
}

.arrow-icon {
  height: fit-content;
  cursor: pointer;
  position: fixed;
  right: 4%;
  transition: 0.5s;
  &-2 {
    left: 4%;
    transform: rotate(180deg);
  }
}

.color-list {
  display: flex;
  justify-content: space-between;
  max-width: 90%;
  overflow-x: auto;
  scroll-snap-type: x;
  scroll-behavior: smooth;
  gap: 15px;
}

.color-list::-webkit-scrollbar {
  display: none;
}

.rotate {
  transform: rotate(180deg);
}

.safari-color-item {
  margin: 0px 5px 0px 5px; 
}

@media (max-width: 1000px) {
  .colorBar {
    width: 50vw;
    padding: 10px 30px;
    bottom: 50px
  }
  .color-list {
    max-width: 100%;
  }
  .color-item {
    min-width: 20px;
    height: 20px;
  }
  .arrow-icon {
    width: 10px;
  }
}

